--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
           <h1>INGREDIENTS</h1>
           <div class="input-name-and-input">
             <h1>Ingredient 1</h1>
-            <input type="text" id="new-recipe-ingredient-1"/>
+            <input type="text" placeholder="Format: 'Quantity, Unit, Description'" id="new-recipe-ingredient-1"/>
           </div>
           <div class="input-name-and-input">
             <h1>Ingredient 2</h1>
-            <input type="text" id="new-recipe-ingredient-2"/>
+            <input type="text" placeholder="Format: 'Quantity, Unit, Description'" id="new-recipe-ingredient-2"/>
           </div>
           <div class="input-name-and-input">
             <h1>Ingredient 3</h1>
-            <input type="text" id="new-recipe-ingredient-3"/>
+            <input type="text" id="new-recipe-ingredient-3" placeholder="Format: 'Quantity, Unit, Description'"/>
           </div>
           <div class="input-name-and-input">
             <h1>Ingredient 4</h1>
-            <input type="text" id="new-recipe-ingredient-4"/>
+            <input type="text" id="new-recipe-ingredient-4" placeholder="Format: 'Quantity, Unit, Description'"/>
           </div>
           <div class="input-name-and-input">
             <h1>Ingredient 5</h1>
-            <input type="text" id="new-recipe-ingredient-5"/>
+            <input type="text" id="new-recipe-ingredient-5" placeholder="Format: 'Quantity, Unit, Description'"/>
           </div>
           <div class="input-name-and-input">
             <h1>Ingredient 6</h1>
-            <input type="text" id="new-recipe-ingredient-6"/>
+            <input type="text" id="new-recipe-ingredient-6" placeholder="Format: 'Quantity, Unit, Description'"/>
           </div>
         </div>
       </div>
