--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="new-recipe-overlay no-display-pseudo">
+  <div class="new-recipe-overlay no-display-pseudo transparency">
     <div class="add-recipe-modal">
       <div class="add-recipe-modal-inputs"> 
         <div>
@@ -80,7 +80,7 @@
     <header>
       <img id="forkify-logo" src="src/img/logo.png" alt="">
       <form action="" id="ZaForumu">
-        <input type="text" placeholder="Search over many recipes..." />
+        <input type="text" placeholder="Search here..." />
         <button><svg>
             <use href="src/img/icons.svg#icon-search"></use>
           </svg>SEARCH</button>
