Stupid fucking fade in animation

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="recipe-list-cont">
         <div class="recipe-list">
         </div>
-        <div class="pagination-cont no-display">
+        <div class="pagination-cont no-interaction-harsh">
           <button class="page-left pagebutton"><svg>
               <use href="src/img/icons.svg#icon-arrow-left"></use>
             </svg> Previous</button>
