Cool fade animation  ! !

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         </div>
       </div>
       <div class="recipe-details">
+        <div class="recipe-details-transp-cont">
+          
+        </div>
       </div>
     </main>
   </div>
