--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
       </div>
       <div class="recipe-details">
         <div class="recipe-details-transp-cont">
-          
+          <div class="search-a-recipe">
+            <img src="src/img/pizzza.png" alt="">
+            <div>Start by searching a keyword (pizza, ice cream..) !</div>
+          </div>
         </div>
       </div>
     </main>
